# follyexample

./: .gitignore  CMakeLists.txt  build.sh  install-prerequisities.sh  install.sh  vcpkg.json
src/: follyexample.cpp
